[package]
name = "lampctl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
open = "5"
chrono = "0.4"


[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.1", features = [
  "Win32_Foundation",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading"
] }
